# CPBL-crawler

./: .env  .gitignore  README.md  db_config.py  pyproject.toml
api/: api_test.html  main.py  model.py  requirements.txt  test.html
crawler/: AI_generation.py  TextBroadCast.py  dashboard.py  data_converter.py  insert_data.py  main.py
